@@ -676,6 +676,9 @@ them through 'format' first.  Even that is discouraged: for ElDoc
 support, you should set 'eldoc-documentation-function' instead of
 calling 'eldoc-message' directly.
 
+** Old-style backquotes now generate an error.  They have been
+generating warnings for a decade.
+
 
 * Editing Changes in Emacs 26.1
 
